[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/things/IslandWaterSprite.gd" type="Script" id=1]
[ext_resource path="res://sprites/smaller-wave-transparent.png" type="Texture" id=2]

[node name="IslandWaterSprite" type="Node2D"]
script = ExtResource( 1 )

[node name="wave1" type="Sprite" parent="."]
position = Vector2( -3838, 500 )
texture = ExtResource( 2 )

[node name="wave2" type="Sprite" parent="."]
position = Vector2( 0, 500 )
texture = ExtResource( 2 )

[node name="wave3" type="Sprite" parent="."]
position = Vector2( 3838, 500 )
texture = ExtResource( 2 )

[node name="wave4" type="Sprite" parent="."]
position = Vector2( 7676, 500 )
texture = ExtResource( 2 )
